5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4469/executions/1708_3038.log
== SUBMITION (2019-04-29 15:37:43) 
-- CODE:
from math import*

x = float(input())

if(x <= -1) or (x >= 1):
	print(round(abs(x) ** (1 / n), 2))
elif(-1 < x or x < 0) or (0 < x or x < 1):
	print(round(abs(x), 2))
else:
	print(round(0, 2))
-- EXECUTION TIME:
0.163114
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3038/main.py", line 6, in <module>
    print(round(abs(x) ** (1 / n), 2))
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:37:47) 
-- CODE:
from math import*

x = float(input())

if(x <= -1) or (x >= 1):
	print(round(abs(x) ** (1 / n), 2))
elif(-1 < x or x < 0) or (0 < x or x < 1):
	print(round(abs(x), 2))
else:
	print(round(0, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(abs(x) ** (1 / n), 2))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:38:29) 
-- CODE:
from math import*

x = float(input())

if(x <= -1) or (x >= 1):
	print(round(abs(x) ** (1 / n), 2))
elif(-1 < x or x < 0) or (0 < x or x < 1):
	print(round(abs(x), 2))
else:
	print(round(0, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(abs(x) ** (1 / n), 2))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:39:07) 
-- CODE:
from math import*

x = float(input())

if(x <= -1) or (x >= 1):
	print(round(abs(x) ** (1 / n), 2))
elif(-1 < x or x < 0) or (0 < x or x < 1):
	print(round(abs(x), 2))
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(abs(x) ** (1 / n), 2))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:39:23) 
-- CODE:
from math import*

x = float(input())

if(x <= -1) or (x >= 1):
	print(round(abs(x) ** (1 / n), 2))
elif(-1 < x or x < 0) or (0 < x or x < 1):
	print(round(abs(x), 2))
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(abs(x) ** (1 / n), 2))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:40:32) 
-- CODE:
from math import*

x = float(input())

if(x <= -1) or (x >= 1):
	print(round(abs(x) ** (1 / n), 2))
elif(-1 < x or x < 0) or (0 < x or x < 1):
	print(round(abs(x), 2))
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(abs(x) ** (1 / n), 2))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:41:18) 
-- CODE:
from math import*

x = float(input())

if(x <= -1) or (x >= 1):
	print(round(abs(x) ** (1 / 2), 2))
elif(-1 < x or x < 0) or (0 < x or x < 1):
	print(round(abs(x), 2))
else:
	print(0)
-- OUTPUT:
1.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:43:29) 
-- CODE:
from math import*

x = float(input())

if(x <= -1) or (x >= 1):
	print(round(abs(x) ** (1 / 2), 2))
elif((-1 < x or x < 0) or (0 < x or x < 1)) and x != 0:
	print(round(abs(x), 2))
else:
	print(0)
-- EXECUTION TIME:
0.128823
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
1.41
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0.01
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
16.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
